# graphlearn-for-pytorch

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  env.sh  install_dependencies.sh  setup.py  test_cpp_ut.sh  test_python_ut.sh
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation.yml  feature-request.yml
.github/workflows/: glt-ci.yml  glt-v6d-ci.yml  manylinux-cd.yml  manylinux-cuda11.7-cd.yml  ubuntu20.04-py3.8-cuda11.6-ci.yml  ubuntu20.04-py3.8-cuda11.6-unit-test.yml
.github/workflows/scripts/: build.sh  build_glt.sh  build_wheel.sh  upload_glt_packages.sh  upload_pypi.sh
benchmarks/api/: README.md  bench_dist_config.yml  bench_dist_neighbor_loader.py  bench_feature.py  bench_sampler.py  run_dist_bench.py
dockerfiles/: graphlearn-torch-dev.Dockerfile  graphlearn-torch-wheel.Dockerfile  gs-graphlearn-torch-dev.Dockerfile
docs/: Makefile  README.md  conf.py  contribute.md  faq.md  index.rst  requirements.txt
docs/apis/: channel.rst  data.rst  distributed.rst  loader.rst  modules.rst  partition.rst  sampler.rst  utils.rst
docs/get_started/: dist_train.md  graph_basic.md  hetero.md  link_pred.md  node_class.md
docs/install/: install.md
docs/tutorial/: aliyun.md  basic_object.md  dist.md  graph_ops.md
examples/: README.md  feature_mp.py  graph_sage_unsup_ppi.py  seal_link_pred.py  train_sage_ogbn_products.py  train_sage_prod_with_trim.py
examples/distributed/: README.md  dist_train_sage_supervised.py  dist_train_sage_supervised_with_server.py  partition_ogbn_dataset.py  run_dist_train_sage_sup.py
examples/distributed/dist_link_prediction/: dist_link_pred.py  preprocess_template.py
examples/distributed/dist_sage_unsup/: dist_sage_unsup.py  preprocess_template.py
examples/distributed/server_client_mode/: sage_supervised_client.py  sage_supervised_server.py
examples/gpt/: README.md  arxiv.py  utils.py
examples/hetero/: bipartite_sage_unsup.py  bipartite_sage_unsup_insampling.py  hierarchical_sage.py  train_hgt_mag.py  train_hgt_mag_mp.py
examples/igbh/: README.md  build_partition_feature.py  compress_graph.py  dataset.py  dist_train_rgnn.py  download-igbh-full-p32.py  download_igbh_full.sh  download_igbh_large.sh  partition.py  rgnn.py  split_seeds.py  train_rgnn.py  train_rgnn_multi_gpu.py  utilities.py
examples/multi_gpu/: train_sage_ogbn_papers100m.py
examples/pai/: README.md  data_preprocess.py  requirements.txt  train_products_sage.py  train_products_sage_mp.py
examples/pai/ogbn_products/: README.md  data_preprocess.py  dist_train_products_sage.py  train_products_sage.py
graphlearn_torch/csrc/: sample_queue.cc  shm_queue.cc  tensor_map.cc
graphlearn_torch/csrc/cpu/: graph.cc  inducer.cc  inducer.h  random_negative_sampler.cc  random_negative_sampler.h  random_sampler.cc  random_sampler.h  stitch_sample_results.cc  subgraph_op.cc  subgraph_op.h  vineyard_utils.cc  weighted_sampler.cc  weighted_sampler.h
graphlearn_torch/csrc/cuda/: graph.cu  hash_table.cu  inducer.cu  inducer.cuh  random_negative_sampler.cu  random_negative_sampler.cuh  random_sampler.cu  random_sampler.cuh  stitch_sample_results.cu  subgraph_op.cu  subgraph_op.cuh  unified_tensor.cu  weighted_sampler.cuh
graphlearn_torch/csrc/rpc/: client.cc  dist_server_grpc.cc  dist_server_grpc.h  server.cc  server_threadpool.h
graphlearn_torch/csrc/rpc/proto/: helloworld.proto  proto_generator.py
graphlearn_torch/include/: common.cuh  common.h  func_factory.h  graph.h  hash_table.cuh  inducer_base.h  negative_sampler.h  sample_queue.h  sampler.h  shm_queue.h  stitch_sample_results.h  subgraph_op_base.h  tensor_map.h  types.h  unified_tensor.cuh  vineyard_utils.h
graphlearn_torch/python/: __init__.py  py_export.cc  py_export_glt.cc  py_export_v6d.cc  typing.py
graphlearn_torch/python/channel/: __init__.py  base.py  mp_channel.py  remote_channel.py  shm_channel.py
graphlearn_torch/python/data/: __init__.py  dataset.py  feature.py  graph.py  reorder.py  table_dataset.py  unified_tensor.py  vineyard_utils.py
graphlearn_torch/python/distributed/: __init__.py  dist_client.py  dist_context.py  dist_dataset.py  dist_feature.py  dist_graph.py  dist_grpc_client.py  dist_grpc_server.py  dist_link_neighbor_loader.py  dist_loader.py  dist_neighbor_loader.py  dist_neighbor_sampler.py  dist_options.py  dist_random_partitioner.py  dist_sampling_producer.py  dist_server.py  dist_subgraph_loader.py  dist_table_dataset.py  event_loop.py  rpc.py
graphlearn_torch/python/loader/: __init__.py  link_loader.py  link_neighbor_loader.py  neighbor_loader.py  node_loader.py  subgraph_loader.py  transform.py
graphlearn_torch/python/partition/: __init__.py  base.py  frequency_partitioner.py  partition_book.py  random_partitioner.py
graphlearn_torch/python/sampler/: __init__.py  base.py  negative_sampler.py  neighbor_sampler.py
graphlearn_torch/python/utils/: __init__.py  build.py  build_glt.py  common.py  device.py  exit_status.py  mixin.py  singleton.py  tensor.py  topo.py  units.py
graphlearn_torch/v6d/: vineyard_utils.cc  vineyard_utils.h
scripts/: build_wheel.sh  launch_container.sh  remove_container.sh  run_cpp_ut.sh  run_python_ut.sh
test/cpp/: test_graph.cu  test_hash_table.cu  test_hetero_inducer.cu  test_inducer.cu  test_random_negative_sampler.cu  test_random_sampler.cu  test_shm_queue.cu  test_stitch_sample_results.cu  test_subgraph.cu  test_tensor_map_serializer.cu  test_unified_tensor.cu  test_vineyard.cc  test_vineyard.cu
test/python/: dist_test_utils.py  test_dist_feature.py  test_dist_link_loader.py  test_dist_neighbor_loader.py  test_dist_random_partitioner.py  test_dist_subgraph_loader.py  test_feature.py  test_graph.py  test_grpc.py  test_hetero_neighbor_sampler.py  test_link_loader.py  test_neighbor_sampler.py  test_partition.py  test_pyg_remote_backend.py  test_sample_prob.py  test_shm_channel.py  test_subgraph.py  test_unified_tensor.py  test_vineyard.py
test/python/vineyard_data/: config.json
test/python/vineyard_data/modern_graph/: config.json  created.csv  knows.csv  person.csv  software.csv
